Fixed footer & support section & alignment

--- a/fle_site/static/less/styles.less
+++ b/fle_site/static/less/styles.less
@@ -456,8 +456,10 @@ a.icon:before {
 }
 
 div.comm-btns.row {
+    margin-top: -30px;
     padding-top: 0px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+    text-align: center;
 }
 
 #deployment {
@@ -562,16 +564,14 @@ div.row.download-row{
 
 #support {
     .col-md-4 {
-        padding-bottom: 30px;
+        h3 { 
+           text-align: center; 
+        }
         img {
             height: 35px;
             display:inline
         }
     }
-}
-
-#emailbtn {
-    border:none;
 }
 
 #faq-nav {
